# Verdant-Desktop

./: .env.example  .gitignore  AGENTS.md  BUGS.md  CHANGELOG.md  FEATURE_REQ.md  README.md  index-dark.html  index.html  package-lock.json  package.json  static.html  vite.config.ts
.github/workflows/: nightly-main.yml  promote-stable.yml
src/: App.svelte  api.js  main.js  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/assets/: oauth-success.html
src-tauri/capabilities/: default.json
src-tauri/src/: auth.rs  background_sync.rs  commands.rs  credentials.rs  crypto.rs  db.rs  gmail.rs  imap.rs  imap_sync.rs  lib.rs  main.rs  mime.rs  models.rs  smtp.rs  smtp_send.rs  state.rs  sync.rs
src-tauri/src/commands/: accounts.rs  app_config.rs  attachments.rs  auth.rs  autostart.rs  compose.rs  mail.rs  mod.rs  shell.rs  unsubscribe.rs  updater.rs  window.rs
src/lib/: api.ts  contacts.js  format.js  hotkeys.js  i18n.js  sanitize.js  sync.js  toast.js
src/lib/components/: AddAccountModal.svelte  ComposeModal.svelte  EmailListPane.svelte  ReadingPane.svelte  Sidebar.svelte
src/lib/stores/: accounts.ts  emails.ts  ui.ts
src/ui/: accounts.js  compose.js  onboarding.js  reading.js  settings.js  shell.js  sidebar.js  styles.js  thread.js  whatsnew.js
src/ui/styles/: dynamic.css  shell.css  whatsnew.css
